# gj

./: CLAUDE.md  README.md  pyproject.toml
backend/api/: .dockerignore  Dockerfile  README.md
backend/api/src/: __init__.py  main.py
backend/api/src/common/: schemas.py
backend/api/src/users/: service.py
backend/api/src/users/v1/: user.py
backend/bot/: Dockerfile  entrypoint.sh  main.py
backend/bot/filters/: admin.py
backend/bot/handlers/: __init__.py
backend/bot/handlers/admin/: __init__.py  admin.py
backend/bot/handlers/channel/: __init__.py  new_channel_member.py
backend/bot/handlers/errors/: __init__.py  bot_api_errors.py
backend/bot/handlers/user/: __init__.py  start.py
backend/bot/keyboards/: inline.py
backend/bot/locales/: messages.pot
backend/bot/middlewares/: config.py  database.py  i18n.py
backend/bot/services/: broadcaster.py  sheduler.py
backend/bot/utils/: edit_message.py  set_bot_commands.py
backend/infrastructure/api_services/common/: cache.py  cors.py  exceptions.py  request.py
backend/infrastructure/database/: requests.py  setup.py
backend/infrastructure/database/models/: base.py  users.py
backend/infrastructure/database/repo/: base.py  users.py
backend/infrastructure/migrations/: env.py
backend/scripts/alembic/: create_migrations.sh  downgrade_migration.sh  run_migrations.sh
backend/settings/: __init__.py  app_settings.py  bot_settings.py  db_settings.py  logging_settings.py  miscellaneous_settings.py
docker/: .env.prod  dev.yml  prod.yml  test.yml
docker/nginx/: dev.site.conf  nginx.conf  prod.site.conf
(+2 files in other folders)
