[tool.poetry]
name = "telegram-web-app"
version = "0.1.0"
description = ""
authors = ["alex <i@alex-bogdanov.ru>"]
license = "GNU v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
SQLAlchemy = "^2.0.29"
asyncpg = "^0.29.0"
betterlogging = "^1.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
redis = "~4.5"
babel = "^2.14.0"
apscheduler = "^3.10.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.2.1"
httpx = "^0.27.2"
fastapi = "^0.115.2"
fastapi-pagination = "^0.12.14"
fastapi-limiter = "^0.1.6"
fastapi-cache2 = { version = "~0.2", extras = ["redis"] }
orjson = "^3.10.7"
uvicorn = {extras = ["standard"], version = "^0.31.1"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
